--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,11 @@
 <html>
 <head>
   <title><%= @title || "MultiMeet" %></title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link rel="icon" 
-      type="image/png" 
-      href="/logo.png">
+  <link rel="icon" type="image/png" href="/logo.png">
 </head>
 <body>
 <%= yield %>
