--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,10 +1,9 @@
-<%= stylesheet_link_tag "application" %>
 <% @title = "Create New Project - MultiMeet" %>
 <%= render 'layouts/navbar' %>
 <%= render 'layouts/alerts' %>
 
-<div class="user-container" style="width:58%">
-  <div class="jumbotron">
+<div class="user-container">
+  <div class="jumbotron shadow white-bg">
 
     <h4>Enter the name of your new project here</h4>
 
@@ -23,14 +22,13 @@
         <div class="form-group">
           <%= f.text_field :project_name, placeholder: "Project Name", class: "form-control"%>
         </div>
-
       <% end %>
-
-      <div class="actions">
-        <%= f.submit "Create Project", class:"btn btn-primary", style:"width=100%"  %>
-        <%= f.submit "Create Project and Choose Times", class: "btn btn-primary" %>
-        <%= link_to 'Back', projects_path, class:"btn btn-primary" %>
-      </div>
-    <% end %>
+    
   </div>
+  <div class="actions jumbotron white-bg shadow">
+    <%= f.submit "Create Project", class:"btn btn-primary", style:"width=100%"  %>
+    <%= f.submit "Create Project and Choose Times", class: "btn btn-primary" %>
+    <%= link_to 'Back', projects_path, class:"btn btn-primary" %>
+  </div>
+  <% end %>
 </div>
