js scripts load on times only

--- a/app/views/times/new.html.erb
+++ b/app/views/times/new.html.erb
@@ -1,3 +1,6 @@
+<% content_for :for_head do %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> 
+<% end %>
 <% @title = "Select Times - MultiMeet" %>
 <%= render 'layouts/navbar' %>
 <%= render 'layouts/alerts' %>
