--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= @title || "MultiMeet" %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <link rel="icon" type="image/png" href="/logo.png">
-</head>
-<body>
-<%= yield %>
+  
+  <head>
+    <title><%= @title || "MultiMeet" %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <link rel="icon" type="image/png" href="/logo.png">
+    <% if content_for? :for_head %>
+      <%= yield :for_head %>
+    <% end %>
+  </head>
 
-</body>
+  <body>
+    <%= yield %>
+  </body>
+
 </html>
