--- a/app/views/participants/display.html.erb
+++ b/app/views/participants/display.html.erb
@@ -1,3 +1,13 @@
+<% content_for :for_head do %>
+  <script src="/assets/jquery.js" type="text/javascript"></script>
+  <script>
+    $(document).on('change', '.custom-file-input', function(){
+      var fileName = document.getElementById("csvInputFile").files[0].name;
+      $(this).next('.custom-file-label').addClass("selected").html(fileName);
+    });
+  </script> 
+<% end %>
+
 <% @title = @project.project_name + " Participants - MultiMeet" %>
 <%= render 'layouts/navbar' %>
 <%= render 'layouts/alerts' %>
