--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -12,7 +12,7 @@
 
     <div class="actions jumbotron shadow white-bg">
       <%= f.submit "Confirm Renaming", class:"btn btn-primary"  %>
-      <%= link_to 'Cancel', project_path(@project), class:"btn btn-secondary" %>
+      <%= link_to 'Back', project_path(@project), class:"btn btn-secondary" %>
     </div>
   <% end %>
 
