--- a/app/views/rankings/edit.html.erb
+++ b/app/views/rankings/edit.html.erb
@@ -28,7 +28,7 @@ function parseRank(rank) {
 <% if valid_secret_id? %>
 
   <div class="jumbotron times-index shadow white-bg">
-    <h2>Please enter your preferences for these times.</h2>
+    <h2>Enter your preferences for these times.</h2>
 
     <p><strong>Participant: </strong> <%= @participant.email %></p>
     <p><strong>Project: </strong>
