--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -26,7 +26,7 @@
           </span>
         </div>
     <% end %>
-    <div class="card"><%= link_to 'Display Participants', project_participants_path(@project), class:"btn btn-danger" %></div>
+    <div class="card display-participant"><%= link_to 'Display Participants', project_participants_path(@project), class:"btn btn-danger" %></div>
   </div>
 </div>
 
