--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -515,4 +515,9 @@ span1:hover {
         grid-template-columns: 50% 50%;
         grid-row-gap: 10px;
     }
+    
+    .edit-participants-action{
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
 }
