--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -32,12 +32,12 @@
                                                      placeholder: "Match Degree", class: "form-control",
                                                      required: "required" %>
       </div>
+      <div class="actions edit-participants-action">
+        <%= f.submit "Update Participant", class:"btn btn-success"  %>
+        <%= link_to 'Back', project_participants_path, class:"btn btn-primary" %>
+        <%= link_to 'Delete Participant', project_participant_path(@participant.project_id, @participant.id), method: :delete, url: project_participants_path, class:"btn btn-danger"%></td>
+      </div>
+    <% end %>
 
   </div>
-  <div class="actions edit-participants-action jumbotron white-bg shadow">
-      <%= f.submit "Update Participant", class:"btn btn-success"  %>
-      <%= link_to 'Back', project_participants_path, class:"btn btn-primary" %>
-      <%= link_to 'Delete Participant', project_participant_path(@participant.project_id, @participant.id), method: :delete, url: project_participants_path, class:"btn btn-danger"%></td>
-  </div>
-  <% end %>
 </div>
