--- a/app/views/matchings/show.html.erb
+++ b/app/views/matchings/show.html.erb
@@ -22,12 +22,12 @@
 						<td>
 							<div class="btn-group">
 								<button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									<%= Time.parse(event["timestamp"]).strftime("%A, %B %d %Y %I:%M %p") %>
+									<%= Time.parse(event["timestamp"]).strftime("%A, %B %d %I:%M %p") %>
 								</button>
 								<div class="dropdown-menu">
 									<% @times.where(is_date: false).each do |time| %>
 										<a style="text-decoration: none">
-											<%= link_to time.date_time.strftime("%A, %B %d %Y %I:%M %p"), modify_project_matching_path(@project, [[index], [time.date_time.strftime("%A, %B %d %Y %I:%M %p")]]), method: :modify%>
+											<%= link_to time.date_time.strftime("%A, %B %d %I:%M %p"), modify_project_matching_path(@project, [[index], [time.date_time.strftime("%A, %B %d %Y %I:%M %p")]]), method: :modify%>
 										</a>
 									<% end %>
 								</div>
