temp fix matchings modify error

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -520,6 +520,11 @@ span1:hover {
                     line-height: 1;
                     font-size: 12px;
                 }
+                .dropdown-menu{
+                    a {
+                        font-size: 12px;
+                    }
+                }
             }
             
             td{
