--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -269,19 +269,22 @@ ul {
     padding: 0;
 }
 
-span.proj { 
+.proj { 
   position:absolute;
   width:100%;
   height:100%;
   top:0;
   left: 0;
-  transition: 0.5s;}
-  span:hover {background-color: #42bff4;
+  transition: 0.5s;
+}
+  
+.proj:hover {
+  background-color: #42bff4;
   opacity: 0.5;
   color: white;
 }
 
-span1.proj1 { 
+.proj1 { 
   position:absolute;
   width:100%;
   height:100%;
@@ -292,7 +295,7 @@ span1.proj1 {
   color: white;
 }
 
-span1:hover {
+.proj1:hover {
     background-color: #cccccc;
     opacity: 0.5;
 }
@@ -369,6 +372,7 @@ span1:hover {
     .button_to{
         margin-top: 20px;
     }
+    
 }
 
 .matching-actions{
