--- a/app/views/times/new.html.erb
+++ b/app/views/times/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :for_head do %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> 
+  <%= javascript_include_tag 'times', 'data-turbolinks-track' => true %> 
 <% end %>
 <% @title = "Select Times - MultiMeet" %>
 <%= render 'layouts/navbar' %>
